# cognidoc

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  SESSION_RESUME.md  docai.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: graph_schema.yaml  graph_schema_generic.yaml
docs/: BACKLOG.md  QUICKSTART.md  ROADMAP.md
docs/architecture/: query_pipeline.md
src/: chunk_text_data.py  cognidoc_app.py  constants.py  convert_pdf_to_image.py  create_embeddings.py  create_image_description.py  extract_entities.py  extract_objects_from_image.py  graph_config.py  graph_retrieval.py  helpers.py  hybrid_retriever.py  knowledge_graph.py  parse_image_with_table.py  parse_image_with_text.py  query_orchestrator.py  run_ingestion_pipeline.py  setup.py  watchComplyChat_app.py
src/cognidoc/: __init__.py  __main__.py  agent.py  agent_tools.py  api.py  build_indexes.py  checkpoint.py  chunk_table_data.py  chunk_text_data.py  cli.py  cognidoc_app.py  complexity.py  constants.py  convert_pdf_to_image.py  convert_to_pdf.py  create_embeddings.py  create_image_description.py  entity_resolution.py  extract_entities.py  extract_objects_from_image.py  graph_backend.py  graph_backend_kuzu.py  graph_backend_networkx.py  graph_config.py  graph_retrieval.py  helpers.py  hybrid_retriever.py  ingestion_manifest.py  knowledge_graph.py  parse_image_with_table.py  parse_image_with_text.py  query_orchestrator.py  run_ingestion_pipeline.py  schema_wizard.py  setup.py
src/cognidoc/prompts/: entity_resolution.txt  markdown_extract_header_and_summarize_prompt.md  system_prompt_expand_query.md  system_prompt_for_image_description.md  system_prompt_for_table_extract.md  system_prompt_generate_final_answer.md  system_prompt_rewrite_query.md  user_prompt_expand_query.md  user_prompt_for_image_description.md  user_prompt_for_text_extract.md  user_prompt_generate_final_answer.md  user_prompt_rewrite_query.md
src/cognidoc/static/: graph-viewer.html
src/cognidoc/utils/: __init__.py  advanced_rag.py  chat_history.py  embedding_cache.py  embedding_providers.py  error_classifier.py  llm_client.py  llm_providers.py  logger.py  metrics.py  rag_utils.py  tool_cache.py
src/utils/: __init__.py  embedding_cache.py  llm_client.py  llm_providers.py  logger.py  rag_utils.py
tests/: conftest.py  test_00_e2e_pipeline.py  test_agent.py  test_agent_tools.py  test_api.py  test_benchmark.py  test_chat_history.py  test_checkpoint.py  test_chunking.py  test_cli.py  test_complexity.py  test_create_embeddings.py  test_e2e_language_and_count.py  test_e2e_pipeline.py  test_entity_resolution.py  test_extract_entities.py  test_graph_backend.py  test_graph_config.py  test_graph_retrieval.py  test_incremental_ingestion.py  test_integration.py  test_knowledge_graph.py  test_optimizations.py  test_pipeline_stages.py  test_providers.py  test_query_orchestrator.py  test_schema_generation.py
tests/fixtures/: test_article.md
