[project]
name = "advanced-hybrid-rag"
version = "0.1.0"
description = "Hybrid RAG pipeline with multi-modal document processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # LLM & Embeddings (direct Ollama usage)
    "ollama>=0.4.0",

    # Vector Store
    "qdrant-client>=1.12.0",

    # Text Processing & Chunking
    "tiktoken>=0.8.0",
    "markdown>=3.7",
    "beautifulsoup4>=4.12.0",
    "json-repair>=0.30.0",

    # Document Processing
    "pdf2image>=1.17.0",
    "docling-core>=2.0.0",

    # Computer Vision
    "ultralytics>=8.3.0",
    "opencv-python>=4.10.0",
    "pillow>=11.0.0",

    # Azure OpenAI (optional)
    "openai>=1.50.0",
    "tenacity>=9.0.0",

    # Web UI
    "gradio>=5.0.0",

    # Utilities
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "torch>=2.5.0",
    "ipython>=8.29.0",

    # Logging
    "loguru>=0.7.0",

    # Multi-provider LLM support
    "google-generativeai>=0.8.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "pylint>=3.3.0",
]
